--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!--        https://www.baeldung.com/spring-security-integration-tests        -->
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-test</artifactId>
+                    <scope>test</scope>
+                </dependency>
     </dependencies>
 
     <build>
